<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMail"
        android:text="@string/lblMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edtMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:id="@+id/tvCuit"
        android:text="@string/lblCuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtCuit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:id="@+id/tvMoneda"
        android:text="@string/lblMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <RadioGroup
        android:id="@+id/optMoneda"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optDolar"
            android:text="@string/lblDolar"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/optPeso"
            android:text="@string/lblPeso"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tvMonto"
        android:text="@string/lblMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtMonto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:id="@+id/tvDias"
        android:text="@string/lblDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <SeekBar
        android:id="@+id/seekDias"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:max="365"
        android:progress="1"/>
    <TextView
        android:id="@+id/tvDiasSelec"
        android:text="@string/lblDiasPlazo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvRendimiento"
        android:text="@string/lblRendimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvAvisarMail"
            android:text="@string/lblAvisarMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/swAvisarMail"/>
    </LinearLayout>
    <ToggleButton
        android:id="@+id/togAcreditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/lblAcreditar"
        android:textOn="@string/lblRenovar"/>
    <CheckBox
        android:id="@+id/chkTerminos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblTernminos"/>
    <Button
        android:id="@+id/btnHacerPF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblHacerPF"
        />

    <EditText
        android:id="@+id/edtMensaje"
        android:layout_weight="1"
        android:inputType="text"
        android:maxLines="6" />
</android.support.constraint.LinearLayout>